Added new files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,6 @@ project(demo)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(demo main.cpp)
+add_executable(demo main.cpp
+        functions.cpp
+        car.cpp)
